--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,6 @@
 [submodule "json"]
 	path = libs/json
 	url = git@github.com:mjansson/json.git
+[submodule "libs/hades2-engine-interface"]
+	path = libs/hades2-engine-interface
+	url = git@github.com:Hades2-coop-project/hades2-engine-interface.git
