--- a/core/CMakeLists.txt
+++ b/core/CMakeLists.txt
@@ -12,10 +12,12 @@ file(GLOB_RECURSE HADES_MOD_CORE_FILES src/*.cpp src/*.h)
 target_sources(
     HadesModNativeExtension
     PUBLIC
-        ${HADES_MOD_CORE_FILES} )
+    ${HADES_MOD_CORE_FILES}
+)
 
 target_link_libraries(HadesModNativeExtension PRIVATE liblua Hades2EngineInterface)
 target_precompile_headers(HadesModNativeExtension PRIVATE src/pch.h)
+
 set_target_properties(HadesModNativeExtension PROPERTIES
     OUTPUT_NAME "HadesModNativeExtension"
     SUFFIX ".asi"
